AMP-21121 Funding alignment issue for Transaction Date field
git-svn-id: file:///svn/branches/AMP_2_10_RELEASE@28800 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
@@ -603,3 +603,13 @@ tr.wicketFundingRowItem:nth-child(odd) {background: #FFFFFF}
 	position: relative;
 	top: -11px;
 }
+.date-position {
+	float:left;
+	margin-top:-2px;
+}
+
+@-moz-document url-prefix() {
+    .date-position {
+        margin-top: 0px;
+    }
+}
